# Ganash

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
docs/reference/libgraphics/: Makefile.am
libgraphics/: Makefile.am  TODO.txt  graphics-color.c  graphics-color.h  graphics-fill.c  graphics-fill.h  graphics-gradient-linear.c  graphics-gradient-linear.h  graphics-gradient-radial.c  graphics-gradient-radial.h  graphics-gradient-stop.c  graphics-gradient-stop.h  graphics-gradient-stops.c  graphics-gradient-stops.h  graphics-gradient.c  graphics-gradient.h  graphics-image.c  graphics-image.h  graphics-painter-iface.c  graphics-painter-iface.h  graphics-painter.c  graphics-painter.h  graphics-path.c  graphics-path.h  graphics-pattern.c  graphics-pattern.h  graphics-solid.c  graphics-solid.h  graphics-stroke.c  graphics-stroke.h  graphics.c  graphics.h
po/: POTFILES.in
tests/: Makefile.am  lib.h
tests/libgraphics/: Makefile.am  main.c  test-graphics-color.c  test-graphics-color.h  test-graphics-fill.c  test-graphics-fill.h  test-graphics-gradient-linear.c  test-graphics-gradient-linear.h  test-graphics-gradient-radial.c  test-graphics-gradient-radial.h  test-graphics-gradient.c  test-graphics-gradient.h  test-graphics-grandient.c  test-graphics-image.c  test-graphics-image.h  test-graphics-painter.c  test-graphics-painter.h  test-graphics-pattern.c  test-graphics-pattern.h  test-graphics-solid.c  test-graphics-solid.h  test-graphics-stroke.c  test-graphics-stroke.h  test-lib.c  test-lib.h  test-suite.c  test-suite.h
