noinst_LTLIBRARIES = libgraphics.la

libgraphics_la_SOURCES =        \
    graphics-gradient-stops.c   \
    graphics-gradient-stops.h   \
    graphics-gradient-stop.c    \
    graphics-gradient-stop.h    \
    graphics-gradient-radial.c  \
    graphics-gradient-radial.h  \
    graphics-gradient-linear.c  \
    graphics-gradient-linear.h  \
    graphics-gradient.c         \
    graphics-gradient.h         \
    graphics-pattern.c          \
    graphics-pattern.h          \
    graphics-painter-iface.c    \
    graphics-painter-iface.h    \
    graphics-painter.c          \
    graphics-painter.h          \
    graphics-solid.c            \
    graphics-solid.h            \
    graphics-image.c            \
    graphics-image.h            \
    graphics-fill.c             \
    graphics-fill.h             \
    graphics-stroke.c           \
    graphics-stroke.h           \
    graphics-path.c             \
    graphics-path.h             \
    graphics-color.c            \
    graphics-color.h



libgraphics_la_LIBADD =  \
    $(CAIRO_LIBS)

AM_CPPFLAGS =       \
    $(CAIRO_CFLAGS)
